@@ -1,4 +1,4 @@
-/* $Id: screen-redraw.c,v 1.7 2008-06-14 18:38:55 nicm Exp $ */
+/* $Id: screen-redraw.c,v 1.8 2008-06-16 17:35:40 nicm Exp $ */
 
 /*
  * Copyright (c) 2007 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -138,8 +138,6 @@ screen_redraw_write_string(struct screen_redraw_ctx *ctx, const char *fmt, ...)
 	va_end(ap);
 
 	for (ptr = msg; *ptr != '\0'; ptr++) {
-		if (ctx->s->cx > screen_last_x(s))
-			break;
 		if (*ptr < 0x20)
 			continue;
 		ctx->write(ctx->data, TTY_CHARACTER, *ptr);
